[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/nasalization-rg.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/HUD/StartMenu/StartGame.gd" type="Script" id=2]
[ext_resource path="res://Assets/StartMenuMessagesStyle.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/CommandLineStyle.tres" type="StyleBox" id=4]
[ext_resource path="res://Scenes/HUD/StartMenu/StartMenu.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[node name="StartGame" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MessageLeft" type="Label" parent="."]
anchor_left = 0.287
anchor_top = 0.221
anchor_right = 0.287
anchor_bottom = 0.221
margin_left = -181.1
margin_top = 84.3
margin_right = 218.9
margin_bottom = 234.3
rect_rotation = -25.0
custom_fonts/font = ExtResource( 3 )
text = "Learn how to use mathematics functions"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageRight" type="Label" parent="."]
anchor_left = 0.726
anchor_top = 0.237
anchor_right = 0.726
anchor_bottom = 0.237
margin_left = -149.8
margin_top = -69.9
margin_right = 180.2
margin_bottom = 39.1
rect_rotation = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Start from the bottom, rise to the Infinite"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.349
anchor_top = 0.643
anchor_right = 0.651
anchor_bottom = 0.759
margin_left = 0.299988
margin_top = -0.100006
margin_right = -0.300049
margin_bottom = -0.300049
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMenu" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
